# halo2-digitsum

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: ci.yml
.github/workflows/: ci.yml
src/: circuit.rs  lib.rs  main.rs  model.rs  proof_system.rs
src/commands/: graph.rs  mod.rs  prove.rs  verify.rs
src/digitsum/: chip.rs  config.rs  instructions.rs  mod.rs
